# author1zed-user-pool

./: .gitignore  Dockerfile  README.md  dependencies.py  docker-compose.yml  main.py  pyproject.toml  settings.py
author1zd/: app.py  settings.py
author1zd/database/: exceptions.py
author1zd/dependencies/: database.py  key_value_storage.py
author1zd/entities/: client.py
author1zd/objects/: auth_code_data.py  refresh_token_claims.py
author1zd/services/: client.py  token.py
author1zd/static/: base_styles.css  error_styles.css
author1zd/templates/: base.html  signup.html
author1zd/utility/: password.py
database/: client.py  engine.py  models.py  session.py  user.py
database/abstract/repositories/: client_repository.py  user_repository.py
database/sqlalchemy/converters/: converter.py  default_converter.py
database/sqlalchemy/repositories/: sqlalchemy_client_repository.py  sqlalchemy_user_repository.py
dependencies/: database.py  key_value_storage.py
entities/: auth_code_data.py  auth_info.py  user.py
exchange_objects/: token_pair.py
key_value_storage/redis/collections/: factory_functions.py  redis_string_set.py  redis_string_to_dataclass_map.py
objects/: access_token_claims.py  auth_info.py
redis_data/: auth_info.py  authorization_code.py  client.py  refresh_token.py  state.py
schemas/: register_user_request_schema.py  register_user_response_schema.py
services/: client.py  token.py
static/: form_styles.css  styles.css
templates/: base.html  base_form.html  error.html  login.html
utility/: token.py  url.py
(+11 files in other folders)
